feat: swagger and postman update
